<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GridImageSearch</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main1">Main1Activity</string>
    <string name="title_activity_search">Image Search</string>
    <string name="enter_search_term">Enter Search Term</string>
    <string name="search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="advanced_search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="image_color">Image Color</string>
    <string name="image_type">Image Type</string>
    <string name="site">Site</string>
    <string name="save">Save</string>
    <string name="site_filter">Site Filter</string>

</resources>
