<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/advanced_search_options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvImageSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvSettingsTitle"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginTop="40dp"
        android:text="@string/image_size"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvImageTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageColorLabel"
        android:layout_below="@+id/tvImageColorLabel"
        android:layout_marginTop="40dp"
        android:text="@string/image_type" />

    <TextView
        android:id="@+id/tvImageColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageSizeLabel"
        android:layout_below="@+id/tvImageSizeLabel"
        android:layout_marginTop="40dp"
        android:text="@string/image_color" />

    <Spinner
        android:id="@+id/sImageSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvImageSizeLabel"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvSettingsTitle"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/tvImageSizeLabel"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/sImageColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvImageColorLabel"
        android:layout_alignLeft="@+id/sImageSize"
        android:layout_below="@+id/sImageSize"
        android:textSize="14sp" />

    <Spinner
        android:id="@+id/sImageType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/tvImageTypeLabel"
        android:layout_alignLeft="@+id/sImageColor"
        android:layout_below="@+id/sImageColor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvSiteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvImageTypeLabel"
        android:layout_below="@+id/tvImageTypeLabel"
        android:layout_marginTop="40dp"
        android:text="@string/site" />

    <EditText
        android:id="@+id/etSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvSiteLabel"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/tvSiteLabel"
        android:ems="10"
        android:hint="@string/site_filter" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="onSaveSettings"
        android:text="@string/save" />

</RelativeLayout>
